Доработка http/2